#1488 Integrar Helium amb microservei de dominis
- Eliminar DominiRepository i DominiEntity
- Mètodes de consulta
